<resources>
    <string name="btn_record">记录</string>
    <string name="public_error_nonick">请去个人中心设置昵称</string>
    <string name="public_error_nounit">注意:您还未加入单位</string>
    <string name="public_error_user">您的账号已被停用求知权限</string>
    <string name="public_later">请稍候&#8230;</string>
    <string name="public_loading">加载中,请稍候&#8230;</string>
    <string name="public_syserr">操作失败,请重试</string>
    <string name="public_sysright">操作成功</string>
    <string name="app_name">教宝</string>
    <string name="location_title">签到打卡</string>
    <string name="location_loading">定位中&#8230;请稍候</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="splash_name">splashactivity</string>
    <string name="bottombar_btn_sign">签到</string>
    <string name="bottombar_btn_search">查询</string>
    <string name="bottombar_btn_login">登录</string>
    <string name="error_serverconnect">数据异常</string>
    <string name="error_swichunit">切换单位异常</string>
    <string name="error_internet">网络错误!</string>
    <string name="folder_isEmpty">文件夹为空</string>
    <string name="error_indenity_get">获取身份信息失败</string>
    <string name="error_indenity_login_again">长时间未操作，已登出，重新登录</string>
    <string name="function_publish_work">发布事务</string>
    <string name="function_publish_show">发布单位动态</string>
    <string name="function_publish_notice">发布分享</string>
    <string name="function_studentrecord">学生档案</string>
    <string name="function_eduapp">互联应用</string>
    <string name="function_changeunit">切换单位</string>
    <string name="function_pccenter">个人中心</string>
    <string name="function_myspace">个人空间</string>
    <string name="function_appcenter">应用中心</string>
    <string name="function_exit">退出系统</string>
    <string name="function_creatediscuss">发起群聊</string>
    <string name="function_contacts">通讯录</string>
    <string name="function_friendmultiChoice">选择成员</string>
    <string name="function_changeuser">切换用户</string>
    <string name="function_signin">签到考勤</string>
    <string name="function_dailywork">日程记录</string>
    <string name="function_publishquestion">发布问题</string>
    <string name="function_workol">作业布置</string>
    <string name="function_workol_stu">我的作业</string>
    <string name="function_workol_gen">家长查询</string>
    <string name="function_leave">请假申请</string>
    <string name="function_leave_approval">请假审核</string>
    <string name="messagecenter_title_qiuzhi">求知</string>
    <string name="messagecenter_title_work">事务</string>
    <string name="messagecenter_title_notice">分享</string>
    <string name="messagecenter_title_show">展示</string>
    <string name="messagecenter_title_train">主题</string>
    <string name="leave_headteacher">班主任</string>
    <string name="leave_teacher">老师</string>
    <string name="leave_gen">家长</string>
    <string name="leave_gen_make">请假</string>
    <string name="leave_query">查询</string>
    <string name="leave_getstudentinfo_false">没有获取到学生信息</string>
    <string name="leave_no_myleaves">暂无请假记录</string>
    <string name="leave_success">申请请假成功</string>
    <string name="leave_chosestudent_please">请选择学生</string>
    <string name="leave_choose_class">班级选择</string>
    <string name="leave_modify">修改</string>
    <string name="leave_modifyleave">修改假条</string>
    <string name="leave_modifyleave_success">成功修改假条</string>
    <string name="leave_submitted">已提交</string>
    <string name="leave_uncheck">待审核</string>
    <string name="leave_checked">已审核</string>
    <string name="leave_statistical_query">统计查询</string>
    <string name="leave_check">审批</string>
    <string name="leave_approval">请假审核</string>
    <string name="leave_replace_leave">代人请假</string>
    <string name="leave_class_stuNames">学生名单</string>
    <string name="leave_time_noMoreThanFive">超出限制</string>
    <string name="leave_screen_condition">筛选条件</string>
    <string name="leave_add_time">请添加时间段</string>
    <string name="leave_noConect_Class">无关联班级</string>
    <string name="leave_please_choose_type">请选择请假类型</string>
    <string name="leave_please_choose_class">请选择班级</string>
    <string name="leave_reason">理由</string>
    <string name="leave_reason_edit">理由概述</string>
    <string name="leave_reason_describe">请输入理由,最多100字</string>
    <string name="leave_withdraw">删除</string>
    <string name="leave_entered_audit">假条已进入审核状态</string>
    <string name="leave_please_choose_condition">请先选择筛选条件</string>
    <string name="leave_no_perminssion_to_query">无权限查询</string>
    <string name="leave_temporarily_no_data">暂无数据</string>
    <string name="messagecenter_tome">发给我的</string>
    <string name="messagecenter_coverme">回复我的</string>
    <string name="messagecenter_fromme">我发送的</string>
    <string name="messagecenter_unread">未回复的</string>
    <string name="messagecenter_histroy">历史信息</string>
    <string name="messagecenter_send">信息发送</string>
    <string name="messagecenter_newsarticle">最新更新</string>
    <string name="messagecenter_suggestarticle">推荐</string>
    <string name="messagecenter_juniorunit">下级单位</string>
    <string name="messagecenter_juniorclass">关联班级</string>
    <string name="record_function_newstop">最新\n更新</string>
    <string name="record_function_scollnotice">学校\n通知</string>
    <string name="record_function_classnotice">班级\n通知</string>
    <string name="record_function_dayshow">日常\n表现</string>
    <string name="record_function_appraise">期评\n记录</string>
    <string name="record_function_tecahcernotice">老师\n留言</string>
    <string name="record_function_parentsnotice">家长\n寄语</string>
    <string name="unitmessage_title_readarticle">文章阅读</string>
    <string name="unitmessage_title_visitunit">单位访问</string>
    <string name="unitmessage_title_queryunit">单位搜索</string>
    <string name="unitmessage_title_editarticle">编辑文章</string>
    <string name="unitmessage_title_publisharticle">发布文章</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载&#8230;</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="pullToRefresh_header_pull_loadmore">下拉加载更多</string>
    <string name="login_error_empty">用户名或密码不能为空</string>
    <string name="login_error_login">登录失败</string>
    <string name="data_communication_failed">数据通讯失败</string>
    <string name="phone_no_web">请检查当前网络</string>
    <string name="success_sign">签到成功</string>
    <string name="error_sign">签到失败</string>
    <string name="bottom_back">记录</string>
    <string name="btn_location">定位</string>
    <string name="public_year">年</string>
    <string name="public_month">月</string>
    <string name="public_dayofmonth">日</string>
    <string name="workol_select_desid">请选择自定义作业</string>
    <string name="workol_select_class">请选择班级</string>
    <string name="workol_select_grade">题目年级选择</string>
    <string name="workol_selected_grade">年级选择</string>
    <string name="workol_select_session">章节选择</string>
    <string name="workol_select_subject">教版选择</string>
    <string name="workol_select_mode">科目选择</string>
    <string name="workol_select_title">标题更改</string>
    <string name="up_grade">升级</string>
    <string name="workol_makehw_success">发布成功</string>
    <string name="workol_makehw_faild">发布失败</string>
    <string name="detected_new_version">检测到新版本</string>
    <string name="login_new_version">LoginActivity_new_version</string>
    <string name="workol_session_nocontent">此章节下没有题目,请重新选择章节</string>
    <string name="workol_hw_nocontent">请填写完整</string>
    <string name="workol_hw_notime">请输入截止时间</string>
    <string name="workol_hw_error_time">截止时间需大于当前时间</string>
    <string name="workol_hw_errortime">截止时间输入有误,请重新输入</string>
    <string name="workol_hw_notitle">请输入作业标题</string>
    <string name="workol_hw_errtitle">作业标题需大于5个字且小于50个字</string>
    <string name="qiuzhi_gist_revamp">此答案已被修改</string>
    <string name="login_get_roleIdentity">获取用户身份:</string>
    <string name="login_get_webUrl">获取互联应用Url:</string>
    <string name="login_loginning">登录中&#8230;</string>
    <string name="login_login">登录:</string>
    <string name="login_get_token">获取令牌:</string>
    <string name="login_get_userInfo">获取用户信息:</string>
    <string name="login_loginFailed">登录失败</string>
    <string name="login_registerClient_failed">注册客户端失败</string>
    <string name="login_registerClient">注册客户端:</string>
    <string name="login_communication_handshake">通讯握手</string>
    <string name="login_loginFailed_andAgain">登录超时，正在重新登录</string>
    <string name="login_loginSuccess">登录成功！</string>
    <string name="login_data_communication_failed">数据通讯失败</string>
    <string name="personal_roleIdentity_boardOfEducation">教育局</string>
    <string name="personal_roleIdentity_teacher">老师</string>
    <string name="personal_roleIdentity_parent">家长</string>
    <string name="function_personal_infocollect">应用使用权限说明</string>
    <string name="GenCheckWorkActivity_screen">GenCheckWorkActivity_screen</string>
    <string name="GenCheckWorkActivity_error">GenCheckWorkActivity_error</string>
    <string name="GenCheckWorkActivity_excercise">GenCheckWorkActivity_excersize</string>
    <string name="GenCheckWorkActivity_level">GenCheckWorkActivity_level</string>
    <string name="GenCheckWorkActivity_status">GenCheckWorkActivity_status</string>
    <string name="GenCheckWorkActivity_curr">GenCheckWorkActivity_curr</string>
    <string name="GenCheckWorkActivity_spinner">GenCheckWorkActivity_spinner</string>
    <string name="GenCheckWorkActivity_refresh">GenCheckWorkActivity_refresh</string>
    <string name="GenCheckWorkActivity_loadMore">GenCheckWorkActivity_loadMore</string>
    <string name="StudentWorkActivity_work">StudentWorkActivity_work</string>
    <string name="StudentWorkActivity_exercise">StudentWorkActivity_exercise</string>
    <string name="StudentWorkActivity_exerciseQuery">StudentWorkActivity_exerciseQuery</string>
    <string name="StudentWorkActivity_error">StudentWorkActivity_error</string>
    <string name="StudentWorkActivity_screen">StudentWorkActivity_screen</string>
    <string name="StudentWorkActivity_refresh">StudentWorkActivity_refresh</string>
    <string name="StudentWorkActivity_loadMore">StudentWorkActivity_loadMore</string>
    <string name="StudentWorkActivity_makeButton">StudentWorkActivity_makeButton</string>
    <string name="TeacherPublishWorkActivity_publishWork">TeacherPublishWorkActivity_publishWork</string>
    <string name="TeacherPublishWorkActivity_choseClass">TeacherPublishWorkActivity_choseClass</string>
    <string name="personal_roleIdentity_student">学生</string>
    <string name="register">注册</string>
    <string name="input_passwords">请输入密码</string>
    <string name="input_passwords_again">请再次输入密码</string>
    <string name="commit">提交</string>
    <string name="nickname_">昵称:</string>
    <string name="notAllNumber_notIncludeAt">不能全是数字，不能包含@</string>
    <string name="name_">姓名:</string>
    <string name="noMoreThan20">20字以内</string>
    <string name="old_passwords_">旧密码:</string>
    <string name="please_inputFormerPasswords">请输入原密码</string>
    <string name="new_passwords_">新密码:</string>
    <string name="please_input6_18NewPasswods">请输入6&#8211;18位新密码</string>
    <string name="passwords">密码</string>
    <string name="z6_18words">6&#8211;18个字符</string>
    <string name="confirm_passwords">确认密码</string>
    <string name="unit__goldenView">单位:金视野</string>
    <string name="role__teacher">身份:老师</string>
    <string name="join">加入</string>
    <string name="sms_check_">短信勾选:</string>
    <string name="parent_notice">家长通知</string>
    <string name="feedback">作业情况反馈</string>
    <string name="upload_head_portrait">上传头像</string>
    <string name="user_logout">用户注销</string>
    <string name="quit_system">退出系统</string>
    <string name="sure">确定</string>
</resources>