<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/item_pcc_tv_unitname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unit__goldenView" />

        <TextView
            android:id="@+id/item_pcc_tv_unittype"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/px_to_dip_10"
            android:text="@string/role__teacher" />
    </LinearLayout>

    <TextView
        android:id="@+id/item_pcc_tv_join"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:background="@drawable/work_btnsend_shape"
        android:text="@string/join" />

</RelativeLayout>