<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/px_to_dip_20" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/personal_layout_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nickname_" />

                    <com.jsy_jiaobao.customview.IEditText
                        android:id="@+id/personal_edt_nickname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/px_to_dip_10"
                        android:hint="@string/notAllNumber_notIncludeAt"
                        android:singleLine="true"
                        android:maxLength="20"
                        android:textSize="@dimen/px_to_sp_20" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/name_" />

                    <com.jsy_jiaobao.customview.IEditText
                        android:id="@+id/personal_edt_truename"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/px_to_dip_10"
                        android:maxLength="20"
                        android:hint="@string/noMoreThan20"
                        android:singleLine="true"
                        android:textSize="@dimen/px_to_sp_20" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/personal_layout_pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/old_passwords_" />

                    <com.jsy_jiaobao.customview.IEditText
                        android:id="@+id/personal_edt_oldpwd"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/px_to_dip_10"
                        android:hint="@string/please_inputFormerPasswords"
                        android:inputType="textPassword"
                        android:singleLine="true"
                        android:textSize="@dimen/px_to_sp_20" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/new_passwords_" />

                    <com.jsy_jiaobao.customview.IEditText
                        android:id="@+id/personal_edt_newpwd"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/px_to_dip_10"
                        android:ems="20"
                        android:inputType="textPassword"
                        android:hint="@string/please_input6_18NewPasswods"
                        android:singleLine="true"
                        android:textSize="@dimen/px_to_sp_20" />
                </LinearLayout>
            </LinearLayout>

            <com.jsy_jiaobao.customview.CusListView
                android:id="@+id/personal_listview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:cacheColorHint="#00000000" />
        </LinearLayout>

        <TextView
            android:id="@+id/personal_tv_change"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/px_to_dip_84"
            android:background="@drawable/work_btnsend_shape"
            android:gravity="center"
            android:text="@string/sure"
            android:textColor="@color/white" />
    </LinearLayout>

</ScrollView>