<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/px_to_dip_20" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/px_to_dip_30"
        android:layout_marginBottom="@dimen/px_to_dip_30"
        android:gravity="center_vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/px_to_dip_10"
            android:text="@string/passwords"
            android:textColor="#292929"
            android:textSize="@dimen/px_to_sp_20" />

        <TextView
            android:id="@+id/regist_tv_pwdmsg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginTop="@dimen/px_to_dip_10"
            android:text="@string/z6_18words"
            android:textColor="#292929"
            android:textSize="@dimen/px_to_sp_18" />

        <com.jsy_jiaobao.customview.IEditText
            android:id="@+id/regist_edt_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_toLeftOf="@id/regist_tv_pwdmsg"
            android:hint="@string/input_passwords"
            android:paddingLeft="@dimen/px_to_dip_120"
            android:textColor="#292929"
            android:textColorHint="#b3b3b3"
            android:textSize="@dimen/px_to_sp_20" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/px_to_dip_30"
        android:gravity="center_vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/px_to_dip_10"
            android:text="@string/confirm_passwords"
            android:textColor="#292929"
            android:textSize="@dimen/px_to_sp_20" />

        <TextView
            android:id="@+id/regist_tv_pwdmsg2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginTop="@dimen/px_to_dip_10"
            android:text="@string/z6_18words"
            android:textColor="#292929"
            android:textSize="@dimen/px_to_sp_18" />

        <com.jsy_jiaobao.customview.IEditText
            android:id="@+id/regist_edt_pwd2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_toLeftOf="@id/regist_tv_pwdmsg2"
            android:hint="@string/input_passwords_again"
            android:paddingLeft="@dimen/px_to_dip_120"
            android:textColor="#292929"
            android:textColorHint="#b3b3b3"
            android:textSize="@dimen/px_to_sp_20" />
    </RelativeLayout>

    <TextView
        android:id="@+id/regist_tv_thirdregist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/px_to_dip_50"
        android:background="@drawable/work_btnsend_shape"
        android:gravity="center"
        android:text="@string/register"
        android:textColor="@color/white" />

</LinearLayout>