<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

    <TextView
        android:id="@+id/tree_workol_smsg_name"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/px_to_dip_60"
        android:layout_marginLeft="@dimen/px_to_dip_20"
        android:gravity="center_vertical"
        android:text="@string/sms_check_"
        android:textColor="@color/color_21292b"
        android:textSize="@dimen/px_to_sp_21" />

    <CheckBox
        android:id="@+id/tree_workol_smsg_parent"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/px_to_dip_60"
        android:layout_marginLeft="@dimen/px_to_dip_20"
        android:button="@drawable/workol_tea_checkbox"
        android:checked="true"
        android:text="@string/parent_notice"
        android:textColor="@color/color_797979"
        android:textSize="@dimen/px_to_sp_18" />

    <CheckBox
        android:id="@+id/tree_workol_smsg_feed"
        android:layout_width="wrap_content"
        android:layout_marginLeft="@dimen/px_to_dip_50"
        android:layout_height="@dimen/px_to_dip_60"
        android:button="@drawable/workol_tea_checkbox"
        android:checked="true"
        android:text="@string/feedback"
        android:textColor="@color/color_797979"
        android:textSize="@dimen/px_to_sp_18" />

</LinearLayout>